2007-06-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: examples/lambdabooks.init, examples/foldlist/foldlist.kahua,
	          examples/lambdabooks/book.kahua, examples/lambdabooks/lambdabooks.kahua,
	          examples/lambdabooks/lister.kahua, examples/lambdabooks/login.kahua,
	          examples/lambdabooks/partner.kahua, examples/lambdabooks/review.kahua,
	          examples/lambdabooks/useradmin.kahua,
	          examples/lambdacalcul/lambdacalcul.kahua,
	          examples/lazy-nqueen/lazy-nqueen.kahua,
	          examples/login/login.kahua, examples/nqueen/nqueen.kahua,
	          examples/wiki-iki/wiki-iki.kahua, test/lambdabooks.scm,
	          test/wiki-iki.scm
	  Modernized.  Use index slot, higher-order tag functions, and change
	  character encoding of sources to UTF-8, and so on.

2007-06-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/persistence/dbi.scm, src/kahua/persistence/efs.scm,
	          src/kahua/persistence.scm
	  Improve more to keep consistency between index-caches and id-cache.

2007-06-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/dbm.scm
	  Modernized.

	* Change: src/kahua/user.scm, test/user.scm
	  Change index "login-name" to unique index slot, and drop definition
	  of "key-of" method on <kahua-user>.  Override method "find-kahua-instance"
	  for <kahua-user> to keep backward compatibility.

	* Change: src/kahua-user.scm
	  Add -p(preserve) option to del sub-command.  It only deactivate user
	  instead of deletion.

2007-06-19  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix&Change: src/kahua/persistence.scm, src/kahua/persistence/efs.scm,
	              src/kahua-server.scm, test/index-slots.scm,
	              test/persistence.scm
	  Improve keeping consistency between index-caches and id-cache.

2007-06-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, src/kahua-keyserv.scm,
	          src/kahua-spvr.scm, src/kahua-httpd.scm